fixed various issues in button sequence logic, increased display contrast and font size

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 350px;
+  width: 370px;
   height: 500px;
   background-color: rgb(96, 114, 116);
 }
@@ -78,7 +78,7 @@ button:active {
 .main-display {
   height: 35px;
   text-align: right;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   border-radius: 0 0 8px 8px;
   color: rgb(44, 4, 16);
 }
@@ -86,7 +86,7 @@ button:active {
 .calc-display {
   text-align: right;
   border-radius: 8px 8px 0 0;
-  font-size: 1rem;
+  font-size: 1.15rem;
   color: rgb(59, 25, 35);
 }
 
